--- a/templates/partials/toc_chapters.html
+++ b/templates/partials/toc_chapters.html
@@ -1,5 +1,8 @@
 <!--! CHAPTERS -->
-<div class="toc-pieceLinks--chapters" id="toc-chaptersDisplay">
+<div
+  class="toc-pieceLinks--chapters pointerEvents-none"
+  id="toc-chaptersDisplay"
+>
   <a href="chapterPrologue.html" class="pieceLink pieceLink-chapter" id="c0">
     Prologue: A Meeting
   </a>
