--- a/templates/partials/toc_fiction.html
+++ b/templates/partials/toc_fiction.html
@@ -1,5 +1,5 @@
 <!--! FICTION -->
-<div class="toc-pieceLinks--fiction" id="toc-fictionDisplay">
+<div class="toc-pieceLinks--fiction pointerEvents-none" id="toc-fictionDisplay">
   <a href="#" class="pieceLink pieceLink-fiction" id="f1">
     Mirror In the Mirror
   </a>
