--- a/templates/partials/toc_nonfiction-LF.html
+++ b/templates/partials/toc_nonfiction-LF.html
@@ -1,5 +1,5 @@
 <!--! Longform Nonfiction -->
-<div class="toc-pieceLinks--LF" id="toc-LFDisplay">
+<div class="toc-pieceLinks--LF pointerEvents-none" id="toc-LFDisplay">
   <div class="toc-set1--LF">
     <h3 class="header-LF">The Essays</h3>
     <a href="#" class="pieceLink pieceLink-LF" id="lf1">
