--- a/templates/partials/toc_nonfiction-SF.html
+++ b/templates/partials/toc_nonfiction-SF.html
@@ -1,5 +1,5 @@
 <!--! Shortform Nonfiction -->
-<div class="toc-pieceLinks--SF" id="toc-SFDisplay">
+<div class="toc-pieceLinks--SF pointerEvents-none" id="toc-SFDisplay">
   <a href="#" class="pieceLink pieceLink-SF" id="sf1">
     The Reasons I Can't Find
   </a>
