--- a/scss/_toc-links.scss
+++ b/scss/_toc-links.scss
@@ -71,6 +71,9 @@
     cursor: pointer;
     opacity: 1;
     margin: 3px 0;
+    @include respond(break-greater-1600) {
+      font-size: 2rem;
+    }
   }
   &-poetry {
     border-radius: 5px;
@@ -80,6 +83,9 @@
     cursor: pointer;
     opacity: 1;
     margin: 3px 0;
+    @include respond(break-greater-1600) {
+      font-size: 2rem;
+    }
   }
 
   &-afterLine {
@@ -138,10 +144,16 @@
   cursor: pointer;
 }
 .miniContainer-header {
+  z-index: 10;
   width: 100%;
   font-size: 2.5rem;
   padding-left: 1rem;
-  text-align: left;
+  text-align: center;
   text-decoration: underline;
-  background-color: $color-white-opaque;
+  background-color: $color-white;
+  position: sticky;
+  top: 0;
+  @include respond(break-greater-1600) {
+    font-size: 3.5rem;
+  }
 }
