--- a/scss/_toc-containers.scss
+++ b/scss/_toc-containers.scss
@@ -22,6 +22,9 @@
     display: grid;
     place-items: center;
 
+    @include respond(break-850) {
+      width: 100%;
+    }
     &--container {
       display: flex;
       flex-direction: column;
@@ -33,6 +36,9 @@
     display: grid;
     place-items: center;
 
+    @include respond(break-850) {
+      display: none;
+    }
     &--chapters {
       display: flex;
       height: 80%;
