--- a/templates/partials/subNav_aphorisms.html
+++ b/templates/partials/subNav_aphorisms.html
@@ -1,5 +1,5 @@
 <!------------ APHORISMS ------------>
-<div class="subNav" id="list-aphorisms">
+<div class="subNav pointerEvents-none" id="list-aphorisms">
   <h2 class="subNav-header">Aphorisms - coming soon</h2>
   <a href="#" class="subNav-link">
     <p class="subNav-link--text">1. A Drop In the Ocean</p>
