--- a/templates/partials/subNav_articles.html
+++ b/templates/partials/subNav_articles.html
@@ -1,5 +1,5 @@
 <!------------ PANAGRAM ARTICLES ------------>
-<div class="subNav" id="list-articles">
+<div class="subNav pointerEvents-none" id="list-articles">
   <h2 class="subNav-header">Panagram Articles - coming soon</h2>
   <a href="#" class="subNav-link">
     <p class="subNav-link--text">1. How Does a Panagram Start?</p>
