--- a/templates/partials/subNav_chapters.html
+++ b/templates/partials/subNav_chapters.html
@@ -2,7 +2,7 @@
 <!------------ ------------------------ ------------>
 <!------------ Maxa Millennial Chapters ------------>
 <!------------ ------------------------ ------------>
-<div class="subNav" id="list-chapters">
+<div class="subNav pointerEvents-none" id="list-chapters">
   <h2 class="subNav-header">Maxa Milennial Chapters</h2>
   <a href="chapterPrologue.html" class="subNav-link">
     <p class="subNav-link--text">Prologue</p>
