--- a/templates/partials/subNav_fiction.html
+++ b/templates/partials/subNav_fiction.html
@@ -1,5 +1,5 @@
 <!------------ FICTION ------------>
-<div class="subNav" id="list-shortStories">
+<div class="subNav pointerEvents-none" id="list-shortStories">
   <h2 class="subNav-header">Fiction - coming soon</h2>
   <a href="#" class="subNav-link">
     <p class="subNav-link--text">1. Mirror In the Mirror</p>
