--- a/templates/partials/subNav_poetry.html
+++ b/templates/partials/subNav_poetry.html
@@ -1,5 +1,5 @@
 <!------------ POETRY ------------>
-<div class="subNav" id="list-poetry">
+<div class="subNav pointerEvents-none" id="list-poetry">
   <h2 class="subNav-header">Poetry - coming soon</h2>
   <a href="#" class="subNav-link">
     <p class="subNav-link--text">1. So Soon I'll Retire</p>
