--- a/css/style.css
+++ b/css/style.css
@@ -424,9 +424,6 @@ a {
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
    *=============================================**/ }
-    @media (max-width: 53.125em) {
-      .sideNav-link {
-        display: none; } }
     .sideNav-link:hover {
       background-color: #3c814b; }
     .sideNav-link--text {
@@ -509,7 +506,12 @@ a {
    *=============================================**/ }
   @media (max-width: 53.125em) {
     .subNav {
-      z-index: 10; } }
+      width: 100%;
+      height: 100%;
+      z-index: 10;
+      transition: none;
+      transition-delay: 0;
+      transform: translateX(0); } }
   .subNav > div:not(:first-child) {
     margin-top: 1rem; }
   .subNav > a:not(:first-child) {
@@ -542,6 +544,7 @@ a {
 .subNav-show {
   opacity: 1;
   width: 100%;
+  height: 100%;
   transform: translate(0, 0); }
 
 /**========================================================================
