--- a/scss/_subNav.scss
+++ b/scss/_subNav.scss
@@ -18,6 +18,7 @@
   top: 0%;
   padding: 2rem;
   width: 40rem;
+  overflow: scroll;
   @include respond(break-850) {
     width: 100%;
     height: 100%;
@@ -68,6 +69,5 @@
 .subNav-show {
   opacity: 1;
   width: 100%;
-  height: 100%;
   transform: translate(0, 0);
 }
