--- a/scss/_subNav.scss
+++ b/scss/_subNav.scss
@@ -11,8 +11,8 @@
 .subNav {
   position: absolute;
   opacity: 0;
-  transition: opacity 0.1s;
-  transition-delay: 0.3s;
+  transition: opacity 0.2s;
+  // transition-delay: 0.3s;
   background-color: $color-nav-gray-dark;
   transform: translateX(80%);
   top: 0%;
