--- a/templates/partials/sideNav.html
+++ b/templates/partials/sideNav.html
@@ -1,7 +1,7 @@
 <!------------ SLIDE-IN MENU ------------>
 <!--TEST-->
 <section class="sideNav pointerEvents-none" id="sideMenu">
-  <h3 class="sideNav-header">Table of Contents</h3>
+  <h3 class="sideNav-header"><a href="index.html">Table of Contents</a></h3>
   <div class="sideNav-allLinks">
     <!-- CHAPTERS LINK -->
     <div class="sideNav-link" id="chapters">
