Adding in poems and aphorisms text

--- a/templates/partials/toc/toc.html
+++ b/templates/partials/toc/toc.html
@@ -24,16 +24,16 @@
 
   <div class="toc-pieceLinks">
     <!--! FICTION -->
-    {% include "partials/toc_fiction.html" %}
+    {% include "partials/toc/toc_fiction.html" %}
     <!--! CHAPTERS -->
-    {% include "partials/toc_chapters.html" %}
+    {% include "partials/toc/toc_chapters.html" %}
     <!--! Nonfiction LF -->
-    {% include "partials/toc_nonfiction-LF.html" %}
+    {% include "partials/toc/toc_nonfiction-LF.html" %}
     <!--! Nonfiction SF -->
-    {% include "partials/toc_nonfiction-SF.html" %}
+    {% include "partials/toc/toc_nonfiction-SF.html" %}
     <!--! Aphorisms  -->
-    {% include "partials/toc_aphorisms.html" %}
+    {% include "partials/toc/toc_aphorisms.html" %}
     <!--! Poetry -->
-    {% include "partials/toc_poetry.html" %}
+    {% include "partials/toc/toc_poetry.html" %}
   </div>
 </section>
