--- a/templates/partials/toc/toc_aphorisms.html
+++ b/templates/partials/toc/toc_aphorisms.html
@@ -1,5 +1,8 @@
 <!--! Aphorisms -->
-<div class="toc-pieceLinks--aphorisms" id="toc-aphorismsDisplay">
+<div
+  class="toc-pieceLinks--aphorisms pointerEvents-none"
+  id="toc-aphorismsDisplay"
+>
   <div class="toc-miniContainer">
     <div class="miniContainer-header">Aphorism List</div>
     <div class="pieceLink pieceLink-aphorism" id="a1">A Drop In the Ocean</div>
