added data in for greenerSide, aphorisms, and poetry. Added in modals for greenerSide

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -47,6 +47,7 @@ $color-nav-gray-dark: rgb(70, 70, 70);
 $color-white-opaque: rgba(233, 233, 233, 0.75);
 $color-white-opaque-2: rgba(233, 233, 233, 0.5);
 $color-white-opaque-3: rgba(233, 233, 233, 0.75);
+$color-white-opaque-4: rgba(233, 233, 233, 0.95);
 $color-green-opaque: rgba(86, 210, 112, 0.85);
 $color-chocolate-opaque: rgba(67, 62, 60, 0.5);
 $color-orange-opaque: rgba(255, 145, 0, 0.5);
