--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,7 @@
 @import 'toc-links';
 @import 'toc-containers';
 @import 'toc-theGreenerSide';
+@import 'toc-modals';
 
 //JS Transitions
 @import 'javascript';
