--- a/templates/partials/toc/toc.html
+++ b/templates/partials/toc/toc.html
@@ -37,3 +37,6 @@
     {% include "partials/toc/toc_poetry.html" %}
   </div>
 </section>
+
+<!--! Greener Side Modals -->
+{% include "partials/toc/toc_modals.html" %}
