--- a/scss/_toc-containers.scss
+++ b/scss/_toc-containers.scss
@@ -3,9 +3,11 @@
  *========================================================================**/
 
 .toc {
+  position: relative;
   width: 100%;
   height: 90vh;
   display: flex;
+  overflow: hidden;
   background-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.2),
